<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="computer_devices">Dispositivos computacionais</string>
    <string name="mechanical_appliances">Aparelhos de mecânica</string>
    <string name="electronic_materials">Materiais de eletrônica</string>

    <string name="menu_item_map">Mapa</string>
    <string name="menu_item_list">Lista de produtos</string>

    <string name="app_name">PickByPath</string>
    <string name="app_description">Vuforia Sample Applications</string>
    
    <string name="button_start">Start</string>
    <string name="activities_list_title_string">Vuforia Samples</string>
    <string name="activities_list_empty">No activities</string>

    <string name="feature_model_targets">Model Targets</string>
    <string name="feature_ground_plane">Ground Plane</string>

    <string name="mode_description">Ground Plane mode</string>
    <string name="mode_product_placement">Product Placement</string>
    <string name="mode_mid_air">Mid-Air</string>

    <string name="instruct_point_device">Point device towards the ground</string>
    <string name="instruct_touch_screen">Touch anywhere on screen</string>
    <string name="instruct_gestures">Use 1 finger to move\nUse 2 fingers to rotate</string>
    <string name="instruct_empty"> </string>

    <string name="button_OK">OK</string>
    
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_TITLE">Network Unavailable</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_TITLE">Unsupported Version</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_TITLE">Clock Sync Error</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_TITLE">Request Timeout</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_TITLE">Poor Camera Image</string>
    <string name="UPDATE_ERROR_UNKNOWN_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_DESC">The cloud recognition service access keys are incorrect or have expired.</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_DESC">The cloud recognition service has been suspended.</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_DESC">Please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_DESC">The service is unavailable, please try again later.</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_DESC">The application is using an unsupported version of Vuforia.</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_DESC">Please update the date and time and try again.</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_DESC">The network request has timed out, please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_DESC">The camera does not have enough detail, please try again later.</string>
    <string name="UPDATE_ERROR_UNKNOWN_DESC">The service is unavaiable, please try again later.</string>
    
    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia. Camera not accessible</string>
    <string name="INIT_ERROR_TRACKERS_NOT_INITIALIZED">This device may not be supported. For a list of supported devices please see https://library.vuforia.com/articles/Solution/ground-plane-supported-devices.html</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND_TITLE">Database not found</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND">Please scan an object and load a database</string>
    
    <string name="content_desc_camera_button">Camera Button</string>
    <string name="target_quality_error_title">Low Quality Image</string>
    <string name="target_quality_error_desc">The image has very little detail, please try another.</string>
    
    <string name="menu_back">Vuforia Samples</string>
    <string name="menu_device_tracker">Device Tracker</string>
    <string name="menu_flash">Flash</string>
    <string name="menu_flash_error_on">Unable to turn on flash</string>
    <string name="menu_flash_error_off">Unable to turn off flash</string>
    <string name="menu_contAutofocus">Autofocus</string>
    <string name="menu_contAutofocus_error_on">Unable to activate Continuous Auto-Focus</string>
    <string name="menu_contAutofocus_error_off">Unable to deactivate Continuous Auto-Focus</string>
    <string name="menu_datasets">DATASETS</string>
    <string name="menu_button_red">Red</string>
    <string name="menu_button_blue">Blue</string>
    <string name="menu_button_yellow">Yellow</string>
    <string name="menu_button_green">Green</string>
        
    <string name="splash_screen_description">Vuforia Splash</string>
    <string name="insert_quantity_input_hint">Insira a quantidade</string>
    <string name="confirm_button">Confirmar</string>
    <string name="navigation_summary_title">RESUMO DA NAVEGAÇÃO</string>
    <string name="card_product_name_label">Produto:</string>
    <string name="card_product_quantity_label">Requerido:</string>
    <string name="card_product_quantityc_label">Recolhido:</string>
    <string name="card_product_location_label">Endereço:</string>
    <string name="date_label">Data:</string>
    <string name="time_label">Tempo:</string>
    <string name="name_label">Nome: </string>
    <string name="requester_label">Solicitante: </string>
    <string name="conclude_btn_label">Concluir</string>
    <string name="OpenAppStartIPMessage">Para começar a navegação digite o Código de Acesso disponibilizado pela plataforma WEB.</string>
    <string name="OpenAppStartMessage">Agora basta procurar por uma lista.</string>
    <string name="OpenAppButtonText_waiting">Buscando...</string>
    <string name="OpenAppButtonText_init">Buscar Lista</string>
    <string name="OpenAppButtonText">Iniciar Navegação</string>
    <string name="no_products_to_get">Nenhum produto a pegar.</string>
    <string name="ending_the_list">Encerrando...</string>
    <string name="finishList_btn_label">Encerrar</string>

</resources>
