<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainNavigationSummLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:text="@string/navigation_summary_title"
        android:background="@drawable/shadown"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_20sp"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:paddingBottom="12dp"
        android:textAllCaps="true"
        android:layout_weight="0"
        android:paddingTop="12dp"
        android:textStyle="bold"
        android:elevation="4dp"
        android:translationZ="4dp"
        tools:ignore="UnusedAttribute" />

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/scrollLayoutList"
        android:layout_weight="7"
        android:elevation="3dp"
        android:translationZ="3dp"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingRight="16dp"
                android:paddingLeft="16dp">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/dimen_16sp"
                        android:text="@string/time_label"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:id="@+id/nav_summ_time"
                        android:textSize="@dimen/dimen_16sp"
                        android:text=" 00:00" />
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="8sp">
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/dimen_16sp"
                        android:text="@string/date_label"/>
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:textColor="@color/black"
                        android:id="@+id/nav_summ_date"
                        android:textSize="@dimen/dimen_16sp"
                        android:text=" 99/99/9999"/>
                </LinearLayout>

                <TextView
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_20sp"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_marginTop="36dp"
                    android:textStyle="bold"
                    android:text="@string/menu_item_list"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/LinearLayoutList"
                android:orientation="vertical"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:background="@drawable/shadown"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:elevation="5dp"
        android:translationZ="5dp"
        tools:ignore="UnusedAttribute">
        <Button
            android:background="@drawable/border_button_orange"
            android:text="@string/conclude_btn_label"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="44dp"
            android:textColor="@color/white"
            android:id="@+id/btn_finish"
            android:paddingRight="20dp"
            android:paddingLeft="20dp" />
    </RelativeLayout>
</LinearLayout>