<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*"  android:stretchColumns="*" android:background="#ffffff">

        <!-- Row 1 with single column -->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@drawable/border_table_header"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:textSize="18dp" android:text="Posição"  android:layout_span="3"
                android:padding="18dip" android:background="@drawable/border_table_header"
                android:textColor="#fff"/>

            <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:textSize="18dp" android:text="Nome"  android:layout_span="3"
                android:padding="18dip" android:background="@drawable/border_table_header"
                android:textColor="#fff"/>

            <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:textSize="18dp" android:text="Código"  android:layout_span="3"
                android:padding="18dip" android:background="@drawable/border_table_header"
                android:textColor="#fff"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@drawable/border_table_body"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:textSize="12dp" android:text="1"  android:layout_span="3"
                android:padding="10dip" android:background="@drawable/border_table_body"
                android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:textSize="12dp" android:text="@string/computer_devices"  android:layout_span="3"
                android:padding="10dip" android:background="@drawable/border_table_body"
                android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:textSize="12dp" android:text="4002"  android:layout_span="3"
                android:padding="10dip" android:background="@drawable/border_table_body"
                android:textColor="#000"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@drawable/border_table_body"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:textSize="12dp" android:text="2"  android:layout_span="3"
                android:padding="10dip" android:background="@drawable/border_table_body"
                android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:textSize="12dp" android:text="@string/electronic_materials"  android:layout_span="3"
                android:padding="10dip" android:background="@drawable/border_table_body"
                android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:textSize="12dp" android:text="8922"  android:layout_span="3"
                android:padding="10dip" android:background="@drawable/border_table_body"
                android:textColor="#000"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@drawable/border_table_body"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:textSize="12dp" android:text="3"  android:layout_span="3"
                android:padding="10dip" android:background="@drawable/border_table_body"
                android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:textSize="12dp" android:text="@string/mechanical_appliances"  android:layout_span="3"
                android:padding="10dip" android:background="@drawable/border_table_body"
                android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:textSize="12dp" android:text="6969"  android:layout_span="3"
                android:padding="10dip" android:background="@drawable/border_table_body"
                android:textColor="#000"/>
        </TableRow>
    </TableLayout>
</LinearLayout>